# python-packaging

./: .pre-commit-config.yaml  demo.ipynb  distance.py  footnotes.md  pyproject.toml  temperature.py
.github/workflows/: ci.yml
somewhere-else/: demo.ipynb
src/converters/: temperature.py
src/convertlib/: __init__.py  distance.py  temperature.py
tests/: test_distance.py  test_temperature.py
