[project]
name = "convertlib"
description = "A library for converting between different units."
version = "0.1.0"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
test = [
  "pytest",
  "numpy >= 1.24.0"  # strict=true in np.testing.assert_array_equal (https://numpy.org/doc/stable/release/1.24.0-notes.html#strict-option-for-testing-assert-array-equal)
]
dev = [
  "pytest",
  "numpy >= 1.24.0"  # strict=true in np.testing.assert_array_equal (https://numpy.org/doc/stable/release/1.24.0-notes.html#strict-option-for-testing-assert-array-equal)
]